feat: 行业温度功能
